--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,3 +29,7 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: http://localhost:8761/eureka/
+
+logging:
+  level:
+    com.example.catalog-service: DEBUG
